2004-09-03  Pawel Salek

	* libbalsa/address-book-gpe.c: more consistent behaviour (perhaps
	needs to be discussed).
	* libbalsa/mailbox_imap.c: detect and work around Exchange bugs
	explicitely.
	* libbalsa/imap/imap-{commands,handle}.c: set ::can_fetch_body.
	* libbalsa/imap/imap-handle.h: add ImapMboxHandle::can_fetch_body.
	* libinit_balsa/balsa-initdruid.c: quit on destroy signal.
	* src/expand-alias.c: expand addresses differently.
	* libbalsa/imap/auth-gssapi.c: compile against heimdal (#151753). 

2004-09-03 08:48  PeterB

	* src/balsa-message.c: leave vertical scrollbar in place while html
	widget is displayed.

2004-09-02  Pawel Salek

	Handle parts' content-id for imap mailboxes.
	* libbalsa/body.[hc]: add content-id field and use it.
	* libbalsa/mailbox_imap.c: set it.
	* libbalsa/imap/imap-handle.c: store received content id.
	* libbalsa/imap/libimap.h: ... in ImapBody field.
	* src/balsa-index.c: gtk-2.4.9 has FIXED_HEIGHT bugs fixed. Uff.

2004-09-02 05:15  PeterB

	* src/: balsa-message.c, balsa-message.h: leave room for vertical
	scrollbar when rendering html widget.

2004-09-01 08:35  PeterB

	* src/save-restore.c: change only hide-deleted bit in GUI filter.
	* src/: balsa-app.h, balsa-index.c, pref-manager.c, save-restore.c:
	drop balsa_app.hide_deleted; add_pref_menu and attach_pref_menu
	always use the same callback; implement default sort-field; update
	current views when the default is changed; use
	pm_page_add_to_size_group to align widgets.

2004-08-31 20:07  PeterB

	* src/message-window.c: check message->mailbox.
	* src/main-window.c: notify user about failure in balsa_message_set
	instead of here.
	* src/balsa-message.c: check mailbox when body-ref fails and before
	selecting a new part, and notify user.
	* src/balsa-index.c: check whether message has lost its mailbox.

2004-08-31 20:07  PeterB

	* libbalsa/mailbox.h: change fetch_message_structure api to return
	a gboolean success indicator.